# GenshinAutoPickup

./: .gitignore  CMakeLists.txt  README.md
modules/: DXGIRecorder.h
src/main/: main.cc
src/preprocess/: main.cc
src/test/: main.cc
